css/style.scss
@import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
$font: 'Oxygen', sans-serif;

//@import "reset";
@import "font-awesome/font-awesome.css";
// @import "typography";
@import "colors";
@import "buttons";
@import "nola";
@import "browser-compatibility";
@import "modals";
// @import "login";

@mixin hoverText($bottom, $margin-left, $width: 120px, $font-size: 1rem) {
    left: 50%;
    width: $width;
    visibility: hidden;
    opacity: 0;
    background-color: $hoverTextBg;
    font-family: $font;
    font-size: $font-size;
    color: white;
    text-align: center;
    padding: 5px;
    border-radius: 6px;
    position: absolute;
    z-index: 1;
    bottom: $bottom;
    margin-left: -65px;
    transition: 0.2s;
}

@mixin hoverTextArrow() {
    content: " ";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    color: $hoverTextBg;
    border-width: 5px;
    border-style: solid;
    border-color: $hoverTextBg transparent transparent transparent;
}

* {
    padding: 0px;
    margin: 0px;
}

html {
    font-size: 15px;
    line-height: 1.5rem;
}

.gray{
    color: darkgray;
}

body {
    display: flex;
    flex-direction: column;
    background-color: $bodyBg;
    font-family: $font;
    counter-reset: sidenote-counter;
    color: $textColor; 
    
    #overlay {
        width: 100%;
        height: 100%;
        position: fixed;
        top: 0%;
        background-color: $overlayBg;
        z-index: 99;
        display: none;
        opacity: 0;
    }
    
    header {
        width: 100%;
        display: flex;
        flex-direction: row;
        border-bottom: 1px solid #ebebeb;
        box-shadow: 0 0px 1px rgba(0,0,0,0.2);
        margin-bottom: 1rem;
        background-color: $lightGreen;
        
        nav {
            width: 100%;
            min-width: 200px;
            // height: 50px;
            // margin: 0 auto;
            display: flex;
            // line-height: 50px;

            justify-content: space-between;
            
            a {
                color: $textColor;
                text-decoration: none;
                margin-left: 10px;
            }

            #user{

            }
        }
    }
    
    main {
        width: 70%;
        min-height: 100vh;
        margin: 0 auto;
        margin-bottom: 20px;
        display: flex;
        flex-direction: row;
        
        #left {
            flex-basis: 100%;
            max-width: 100%;
            display: flex;
            flex-direction: column;
            
            #lastUpdated {
                display: none;
            }
            
            h5 {
                font-size: 1.4rem;
                font-weight: 200;
            }
            
            h6 {
                font-weight: 400;
                // margin-bottom: 25px;
                font-size: 0.9rem;
                color: darkgray;
            }
            
            #subjectSelect {
                margin-bottom: 10px;
                width: auto;
                max-width: 150px;
                border: 1px solid rgba(169, 169, 169, 0.2);
                box-shadow: 0 0px 1px rgba(0, 0, 0, 0.1);
            }
            
            #subject {
                font-weight: 400;
                display: none;
            }
            
            input {
                width: calc(65% - 20px);
                display: inline-block;
                font-family: $font;
                font-size: 4rem;
                font-style: normal;
                margin-bottom: 20px;
                border: 1px solid $lightGray;
                color: $textColor;
                padding: 5px 10px;
            }
            
            #exerciseCreationContainer {
                display: none;
                opacity: 0;
                margin-bottom: 10px;
            }
            
            nav {
                // margin-bottom: 20px;
                position:fixed;
                top: 143px;
                left: 10px;
                
                i {
                    display: none;
                    cursor: pointer;
                    position: relative;
                    font-size: 2rem;
                    color: lightgray;
                    // float: left;
                    margin-right: 15px;
                    
                    .faTooltip {
                        @include hoverText(115%, -65px, 120px);
                    }
                }
                
                #preview {
                    opacity: 0;
                }
                
                i:hover .faTooltip {
                    visibility: visible;
                    opacity: 1;
                }
                
                i .faTooltip::after {
                    @include hoverTextArrow();
                }
                
                .buttonContainer {
                display: flex;
                flex-direction: row;
                    flex-wrap: wrap;
                    
                    button {
                        position: relative;
                    }
                    
                    a { 
                        text-decoration: none;
                    }  
                    
                    #saveBtn span {
                        position: absolute;
                        opacity: 0;
                        top: 17px;
                        // left: 28px;
                    }
                    
                    #publishBtn, #deleteBtn {
                        display: none;  
                    }
                }
            }
            
            .editor-wrapper {
                width: 65%;
                margin-bottom: 10px;
                
                .toolbar {
                    border: 1px solid rgba(169, 169, 169, 0.2);
                    border-bottom: none;
                    // padding: 10px 5px;
                    width: 100%;
                    background-color: white;
                    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
                    display: flex;
                    flex-wrap: wrap;
                    
                    .editor-button {
                        padding: 10px 15px;
                        position: relative;
                        background: none;
                        border: none;
                        cursor: pointer;  
                        flex: 1 0 40px;   
                        
                        .tooltiptext {
                            @include hoverText(100%, -60px, 120px);
                            display: none;
                        }
                        
                        #code {
                            font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
                            font-weight: bold;
                        }
                    }
                    
                    .editor-button .tooltiptext::after {
                        @include hoverTextArrow();
                    }
                    
                    .editor-button:hover .tooltiptext {
                        visibility: visible;
                        opacity: 1;
                        display: block;     
                    }
                }
                
                .editor {
                    width: calc(100% - 20px);
                    height: 600px;
                    min-height: 400px;
                    resize: vertical;
                    font-size: 16px;
                    padding: 10px;
                    box-shadow: 0 0px 1px rgba(0,0,0,0.1);
                    font-family: $font;
                    letter-spacing: 0.5px;
                    border: 1px solid rgba(169, 169, 169, 0.2);
                }
            }
        }
    }
    
    footer {
        height: auto;
        padding: 15px 0px;
        display: flex;
        justify-content: space-around;
        border-top: 1px solid rgba(0, 0, 0, 0.1);
    }
}

@media print {
    
    html {
        font-size: 12px;
        
        body {
            margin: 2mm !important;
            
            header {
                display: none;
            }
            
            main {
                width: 80%;
                margin-left: 10%;
                
                #left {
                    
                    nav {
                        display: none;
                    }
                    
                    #exerciseCreationContainer {
                        color: black;
                        
                        #title {
                            margin-top: 4rem;
                        }
                        
                        #lastUpdated, #author, #subject {
                            display: none !important;
                        }
                    }
                    
                    #mainContent {
                        color: black;
                        
                        h2, h3, h4 {
                            page-break-after: avoid;
                        }
                        
                        .sidenote, p, h2, h3, h4 {
                            orphans: 3;
                            widow: 3;
                            color: black;
                        }
                        
                    }
                }
            }
        }
    }
}

@import "queries";

